@@ -17,8 +17,8 @@
 #'
 #' @param x One of the following:
 #' \itemize{
-#' \item A shape (from class \code{\link[sp:Spatial]{Spatial}}, \code{\link[raster:Raster-class]{Raster}}, or \code{\link[sf:sf]{sf}} (simple features)).
-#' \item A bounding box (either 2 by 2 matrix or an \code{\link[raster:Extent]{Extent}} object).
+#' \item A shape (from class \code{\link[sf:sf]{sf}} (simple features)), \code{\link[stars:st_as_stars]{stars}}, \code{\link[sp:Spatial]{Spatial}}, \code{\link[raster:Raster-class]{Raster}}.
+#' \item A bounding box (\code{\link[sf:st_bbox]{st_bbox}}, \code{\link[raster:Extent]{Extent}}, numeric vector of 4 (default order: xmin, ymin, xmax, ymax), or a 2x2 matrix).
 #' \item Open Street Map search query. The bounding is automatically generated by querying \code{x} from Open Street Map Nominatim. See \code{\link{geocode_OSM}} and \url{http://wiki.openstreetmap.org/wiki/Nominatim}.}
 #' If \code{x} is not specified, a bounding box can be created from scratch (see details).
 #' @param ext Extension factor of the bounding box. If 1, the bounding box is unchanged. Values smaller than 1 reduces the bounding box, and values larger than 1 enlarges the bounding box. This argument is a shortcut for both \code{width} and \code{height} with \code{relative=TRUE}. If a negative value is specified, then the shortest side of the bounding box (so width or height) is extended with \code{ext}, and the longest side is extended with the same absolute value. This is especially useful for bounding boxes with very low or high aspect ratios.
