@@ -23,8 +23,8 @@ bb(
 \arguments{
 \item{x}{One of the following:
 \itemize{
-\item A shape (from class \code{\link[sp:Spatial]{Spatial}}, \code{\link[raster:Raster-class]{Raster}}, or \code{\link[sf:sf]{sf}} (simple features)).
-\item A bounding box (either 2 by 2 matrix or an \code{\link[raster:Extent]{Extent}} object).
+\item A shape (from class \code{\link[sf:sf]{sf}} (simple features)), \code{\link[stars:st_as_stars]{stars}}, \code{\link[sp:Spatial]{Spatial}}, \code{\link[raster:Raster-class]{Raster}}.
+\item A bounding box (\code{\link[sf:st_bbox]{st_bbox}}, \code{\link[raster:Extent]{Extent}}, numeric vector of 4 (default order: xmin, ymin, xmax, ymax), or a 2x2 matrix).
 \item Open Street Map search query. The bounding is automatically generated by querying \code{x} from Open Street Map Nominatim. See \code{\link{geocode_OSM}} and \url{http://wiki.openstreetmap.org/wiki/Nominatim}.}
 If \code{x} is not specified, a bounding box can be created from scratch (see details).}
 
